# tsg

./: .gitignore  README.md  pyproject.toml
tsg/: __init__.py
tsg/assets/: __init__.py  sentences.json
