[tool.poetry]
name = "tsg"
version = "0.1.1"
description = "A Typing Speed Game"
authors = ["Eliaz Bobadilla <ultirequiem@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tsg"}, {include = "tsg/assets"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tsg = "tsg:main"
